<resources>
    <string name="app_name">sertifikasi aplikasi KPU</string>
    <string name="NIK">NIK</string>
    <string name="NAMA">NAMA</string>
    <string name="NOHP">NO.HP</string>
    <string name="jenis_kelamin">JENIS KELAMIN</string>
    <string name="pria">Pria</string>
    <string name="wanita">Wanita</string>
    <string name="tanggal">TANGGAL</string>
    <string name="alamat">ALAMAT</string>
    <string name="nik">NIK              :</string>
    <string name="pengertian">
       Aplikasi KPU adalah aplikasi yang digunakan untuk petugas laoangan dalam mendata keluarga yang memiliki hak pilih. dan KPU merupakan lembaga yang mengatur dan mengawasi jalannya pemilu di Indonesia.
    </string>
    <string name="foto">INPUT GAMBAR  :</string>
</resources>